--- a/README
+++ b/README
@@ -13,9 +13,21 @@ I'm working through
 listed alphabetically, not in "you should follow them in this order" order.  
 I'm going throw them as listed anyway just so I can keep track.
 
+
+
 Left off at
     Regexes
         Grouping and Capturing
+
+    ***
+    I actually went off the rails a bit and started watching Jonathan 
+    Worthington's youtube video on Parallelism.
+
+    My notes are in tutorials/concurrency/README, at the bottom.
+
+    I left the video URL and a time bookmark of where I left off in that note.  
+    Pick up from there.
+    ***
 
 
 INSTALLING {#{{{
